<resources>
    <string name="app_name">Learn2Cal Demo</string>
    <string name="start">START</string>
    <string name="about">ABOUT</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="age_under10">0~9</string>
    <string name="age_under20">10~19</string>
    <string name="age_under30">20~29</string>
    <string name="age_under40">30~39</string>
    <string name="age_under50">40~49</string>
    <string name="age_under60">50~59</string>
    <string name="age_over60">60+</string>
    <string name="gender_male">MALE</string>
    <string name="gender_female">FEMALE</string>
    <string name="quiz_title">How many calories are in the food pictured here?</string>
    <string name="calorie_check">CHECK</string>
    <string name="calorie_confirm">NEXT</string>
    <string name="estimation">Estimation: </string>
    <string name="answer_real">Real value: </string>
    <string name="answer_prediction">Your answer: </string>
    <string name="under_estimation">Under estimated</string>
    <string name="over_estimation">Over estimated</string>
    <string name="correct_estimation">Correct!</string>
    <string name="learning_curve">Learning curve</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="cm">cm</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="calories">Calories</string>
    <string name="result_total">Total: </string>
    <string name="result_correct">Correct: </string>
    <string name="result_overestimation">Over estimation: </string>
    <string name="result_underestimation">Under estimation: </string>
    <string name="final_show">SHOW MORE RESULTS</string>
    <string name="final_play">GO PLAY AGAIN</string>
    <string name="final_title">FINAL RESULTS</string>
    <string name="default_value">0</string>
</resources>